--- a/D5_HW5/D5_HW5.csproj
+++ b/D5_HW5/D5_HW5.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <StartupObject>HW5.Program</StartupObject>
   </PropertyGroup>
 
 </Project>
